fixed overflowing tile text

--- a/app/assets/stylesheets/restaurants.css.scss
+++ b/app/assets/stylesheets/restaurants.css.scss
@@ -29,9 +29,9 @@
 
 .restaurant-title-container {
 	background: rgba(0,0,0, .55);
-	padding: 10px;
+	padding: 10px 3%;
 
-	width: 100%;
+	width: 94%;
 
 	position: absolute;
 	bottom: 0;
